--- a/.github/workflows/reactci.yml
+++ b/.github/workflows/reactci.yml
@@ -8,7 +8,11 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        node-version: [18, 19, 20]
 
     steps:
       - name: Checkout repository
@@ -17,13 +21,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: ${{ matrix.node-version }}
 
       - name: npm ci
         run: npm ci
 
       - name: Install dependencies
-        run: npm install
+        run: npm install vite@latest
 
       - name: Run tests
         run: npm test --if-present
